--- a/security.html
+++ b/security.html
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=olGwafwr&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nuT3qMw7'>Guidewire Software, Inc. Careers - Senior Security Engineer - San Mateo,Ca/Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=olGwafwr&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nuT3qMw7'>Guidewire Software, Inc. Careers - Senior Security Engineer - San Mateo,Ca/Remote</a></h5> 
 <p><span class="badge badge-light">San Mateo, California  United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -179,11 +179,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/lookingglass/job/ojrNafwr'>LookingGlass Cyber Solutions Careers - Associate Cyber Security Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/lookingglass/job/ojrNafwr'>LookingGlass Cyber Solutions Careers - Associate Cyber Security Analyst</a></h5> 
 <p><span class="badge badge-light">Reston, Virginia  Reston, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/ogUrbfww'>Liferay, Inc. Careers - Information Security Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/liferay/job/ogUrbfww'>Liferay, Inc. Careers - Information Security Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5413?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Security Engineer - Remote - Mode | Women Who Code</a></h5> 
+<h5><a href='https://www.womenwhocode.com/jobs/5413?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Senior Security Engineer - Remote - Mode | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -247,11 +247,11 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/mobility-security-engineer-dQVbvm9N4r6yGMaKiznY58'>Mobility Security Engineer #0572 job at Stratus Solutions in Arlington, VA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/mobility-security-engineer-dQVbvm9N4r6yGMaKiznY58'>Mobility Security Engineer #0572 job at Stratus Solutions in Arlington, VA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Arlington, VAArlington, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1934385'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1934385'>Job Application for Network Security Software Engineer at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  San Francisco Columbus</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -313,7 +313,7 @@
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543317-etas-internship-embedded-security-analyst-at-the-embedded-security-escrypt-dept-'>Bosch Group ETAS_(Internship)_Embedded Security Analyst at the Embedded Security,Escrypt Dept. | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543317-etas-internship-embedded-security-analyst-at-the-embedded-security-escrypt-dept-'>Bosch Group ETAS_(Internship)_Embedded Security Analyst at the Embedded Security,Escrypt Dept. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -382,7 +382,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=odpWafws&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=ng4SoMwR'>Imperva Careers - Network Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=odpWafws&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=ng4SoMwR'>Imperva Careers - Network Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -414,7 +414,7 @@ tools and services; Work closely with developers to give advice on secure?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1929807'>Job Application for Security Compliance Analyst at Bandwidth</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1929807'>Job Application for Security Compliance Analyst at Bandwidth</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
